--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Yang Chen
-email: yangchen5.yangchen_at_gmail
+email: yangchen5.yangchen@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Yang Chen's mathematical blog.
 baseurl: "" # the subpath of your site, e.g. /blog
